[gd_scene load_steps=23 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/_art_/Lich/LichOof.png" type="Texture" id=2]
[ext_resource path="res://Sprites/_art_/Lich/LichCast.png" type="Texture" id=3]
[ext_resource path="res://Sprites/_art_/Lich/LichRFist.png" type="Texture" id=4]
[ext_resource path="res://Sprites/_art_/Lich/LichIdle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/_art_/Lich/LichRockOn.png" type="Texture" id=6]
[ext_resource path="res://Sprites/_art_/Lich/LichRPoint.png" type="Texture" id=7]
[ext_resource path="res://Hurtbox.gd" type="Script" id=8]
[ext_resource path="res://Sprites/_art_/Effects/BlueLine/BB1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/_art_/Lich/LichRPinkie.png" type="Texture" id=10]
[ext_resource path="res://SoundEffects/NewSounds/Knuckle2.mp3" type="AudioStream" id=11]
[ext_resource path="res://SoundEffects/NewSounds/Knuckle1.mp3" type="AudioStream" id=12]
[ext_resource path="res://SoundEffects/NewSounds/Weewaw.mp3" type="AudioStream" id=13]
[ext_resource path="res://SoundEffects/NewSounds/Wind.mp3" type="AudioStream" id=14]
[ext_resource path="res://SpecialEffectAnimations/LichBubble.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.0
height = 56.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Cast",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Fist",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Oof",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Pinkie",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "PinkieSomatic",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Point",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "RockOn",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 39.0
height = 58.0

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -1000.0
color = Color( 0.780392, 0, 1, 1 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.214844, 0, 0, 1, 0.796875, 0, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -200.0
scale = 1.3
color = Color( 0.658824, 0, 0, 1 )
color_ramp = SubResource( 6 )

[node name="Lich" type="KinematicBody2D" groups=["Enemy", "Lich"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "Cast"
playing = true

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[node name="SomaticSpawn" type="Node2D" parent="."]
position = Vector2( -51, -45 )
__meta__ = {
"_edit_lock_": true
}

[node name="PinkCharge" type="Particles2D" parent="SomaticSpawn"]
emitting = false
lifetime = 0.5
process_material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BloodyCharge" type="Particles2D" parent="SomaticSpawn"]
emitting = false
lifetime = 0.3
process_material = SubResource( 7 )

[node name="RightSpawn" type="Node2D" parent="."]
position = Vector2( 50, -45 )

[node name="LichBubble" parent="RightSpawn" instance=ExtResource( 15 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="RightHand" type="Position2D" parent="RightSpawn"]

[node name="DebugLooker" type="Sprite" parent="RightSpawn/RightHand"]
visible = false
position = Vector2( 50, 0 )
texture = ExtResource( 9 )

[node name="LeftSpawn" type="Node2D" parent="."]
position = Vector2( -53, -53 )
__meta__ = {
"_edit_lock_": true
}

[node name="LichBubble" parent="LeftSpawn" instance=ExtResource( 15 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="LeftHand" type="Position2D" parent="LeftSpawn"]

[node name="DebugLooker" type="Sprite" parent="LeftSpawn/LeftHand"]
visible = false
position = Vector2( 50, 0 )
texture = ExtResource( 9 )

[node name="Sounds" type="Node" parent="."]

[node name="Crack1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 12 )

[node name="Crack2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )

[node name="W" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 14 )

[node name="BlastCast" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 13 )
pitch_scale = 2.04

[node name="Timers" type="Node" parent="."]

[node name="BlastTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="TestTimer" type="Timer" parent="Timers"]
wait_time = 3.0
autostart = true

[node name="Timer3" type="Timer" parent="Timers"]

[connection signal="timeout" from="Timers/BlastTimer" to="." method="_on_BlastTimer_timeout"]
[connection signal="timeout" from="Timers/TestTimer" to="." method="_on_TestTimer_timeout"]
